# Bachelor_diplom

./: .gitignore  CheckPointTest1.txt  Darcula.icls  RegExp.txt  SchemeTest.txt  Формат.txt  Формат_corr2.txt
Points/: CheckPointEzTimeTest.txt  CheckPointTestTwoFlows.txt  CheckPointTestTwoFlowsTopSort.txt
Schemes/: SchemeTestTwoFlows.txt
Times-And-Planes/: Build_Flow.cpp  Build_Flow.h  Build_Zone.cpp  Build_Zone.h  CMakeLists.txt  Calculating times.cpp  Calculating times.h  CheckPoint.h  Flow.h  Function_Fill-scheme.cpp  Function_Fill-scheme.h  Function_Find-IN.cpp  Function_Find-IN.h  Function_OpenFile.cpp  Function_OpenFile.h  Maps.h  Read_CheckPoints.cpp  Read_CheckPoints.h  Read_Scheme.cpp  Read_Scheme.h  Scheme.h  Stage -1.cpp  Stage -1.h  Zone.cpp  Zone.h  main.cpp
Times-And-Planes/Build_/: Build_Flow.h
Times-And-Planes/Fields of Zone/: CheckPoint.h  Cycle.h  Flow.h  Maps.cpp  Maps.h
Times-And-Planes/Functions/: Calculate cycles.cpp  Calculate cycles.h  Calculate times.cpp  Function_Fill-scheme.cpp  Function_Fill-scheme.h  Function_Find-IN.cpp  Function_Find-InMap.cpp  Function_Find-InMap.h  Function_Find-InVector.cpp  Function_Find-InVector.h  Function_MergeTimes.cpp  Function_MergeTimes.h  Function_OpenFile.cpp  Function_OpenFile.h  MergeTimes.cpp  Topologic_Sort.cpp  Topologic_Sort.h
Times-And-Planes/Measure units/: Coordinate.cpp  Coordinate.h  MeasureUnits.h  Time.cpp  Time.h  Velocity.cpp  Velocity.h
Times-And-Planes/Read/: Read_CheckPoints.cpp  Read_CheckPoints.h  Read_CheckPointsRegExp.cpp  Read_CheckPointsRegExp.h  Read_Flow.cpp  Read_Flow.h  Read_FlowRegExp.cpp  Read_Scheme.cpp  Read_Scheme.h  Read_SchemeRegExp.cpp  Read_SchemeRegExp.h
Times-And-Planes/Read_/: Read_CheckPoints.cpp  Read_Flow.cpp  Read_Flow.h  Read_Scheme.cpp
Times-And-Planes/Source information/: Формат.txt
Times-And-Planes/Source information/Flows/: Koltsovo.txt
Times-And-Planes/Source information/Points/: CheckPointTestTwoFlowsTopSort.txt  Koltsovo.txt  Test.txt
Times-And-Planes/Source information/Schemes/: Koltsovo.txt  KoltsovoStScheme.txt  SchemeTest.txt  SchemeTestTwoFlows.txt  Test.txt  TestLoops.txt
Диплом/: Example.eps  Scheme01_plane.eps  Scheme02_plane.cdr  Scheme02_plane.eps  Scheme03_plane.eps  StandardScheme.eps  StandardScheme2.eps  ВКР.tex  Задание_ВКР.docx  МихайловАВ - Задание_ВКР - с_подписью.docx  МихайловАВ - Задание_ВКР.docx  Основная часть.docx  Отзыв_ВКР.doc  Оферта_ВКР.doc  Презентация ВКР.pptx  Расчёты.tex  Титул.doc.docx
Диплом/2Send/: Заключение Антиплагиат.doc  МихайловАВ - Задание_ВКР.docx  МихайловАВ - Отзыв_ВКР.doc
Диплом/Преддипломная практика/: ~$тульный лист.docx  Введение.docx  Задание.docx  Основная часть.docx  Отзыв.docx  Преддипломная работа.tex  Титульный лист.docx
Диплом/Преддипломная практика/2Send/: МихайлоаАВ - Отзыв.docx  МихайловАВ - Задание.docx  МихайловАВ - Титульный лист.docx
Кольцово/: Koltsovo.tex
